feat(backend): add team statistic by projects (clustering k means) #17
